@@ -54,7 +54,7 @@ extern "C" {
     return uaw_CharUpperW(String);
   }
 #endif /* !__CRT__NO_INLINE */
-#endif /* _X86_ */
+#endif /* CharUpper */
 
 #ifdef lstrcmp
   int ua_lstrcmpW(LPCUWSTR String1,LPCUWSTR String2);
@@ -137,7 +137,7 @@ extern "C" {
     return uaw_wcslen(String);
   }
 #endif /* !__CRT__NO_INLINE */
-#endif
+#endif /* _X86_ */
   int ua_wcsicmp(LPCUWSTR String1,LPCUWSTR String2);
 
 #ifndef __CRT__NO_INLINE
@@ -147,7 +147,7 @@ extern "C" {
     return uaw_wcsicmp(String1,String2);
   }
 #endif /* !__CRT__NO_INLINE */
-#endif
+#endif /* _WSTRING_DEFINED */
 
 #ifndef __UA_WCSLEN
 #define __UA_WCSLEN ua_wcslen
